turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:15: error: type mismatch;
 found   : Array[Int]
 required: Int
var T = new Array(Array[Int](2))
                            ^Turmite:15: error: type mismatch;
 found   : Array[Int]
 required: Int
var T = new Array(Array[Int](2))
                            ^Turmite:16: error: type mismatch;
 found   : Array[Int]
 required: Int
var U = new Array(Array[Int](2))
                            ^Turmite:16: error: type mismatch;
 found   : Array[Int]
 required: Int
var U = new Array(Array[Int](2))
                            ^Turmite:19: error: not found: value T
var T(0)=(1,2,0,1,2,1)
    ^Turmite:20: error: not found: value T
var T(1)=(0,1,0,0,1,1)
    ^Turmite:21: error: not found: value U
var U(0)=(1,0);(2,1);(0,0)
    ^Turmite:22: error: not found: value U
var U(1)=(1,0);(2,1);(1,1)
    ^Turmite:67: error: not found: value x
  state = rule(state)(x)(2)
                      ^Turmite:74: error: not found: value init
		init();
                ^Turmite:101: error: ambiguous reference to overloaded definition,
both method step in class Turmite of type (colors: Array[java.awt.Color])Unit
and  method step in class Turmite of type (colors: Array[java.awt.Color])Unit
match argument types (Array[java.awt.Color])
			step(colors);
                        ^Turmite:57: error: method step is defined twice
  conflicting symbols both originated in file 'plm.runtime177.Turmite'
def step(colors:Array[Color] ) {
    ^